[workspace]
members = ["transform"]
resolver = "2"

[package]
name = "swc_plugin_styled_px2rem"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace.dependencies]
serde_json = "1"
regex = "1"
lazy_static = "1"
serde = "1"
swc_core = "5.0.0"
testing = "4.0.0"
swc_ecma_parser = "5.0.0"

[dependencies]
styled_components_px2rem = { path = "./transform" }