[package]
name = "styled_components_px2rem"
version = "0.1.0"
edition = "2021"

[lib]
name = "styled_components_px2rem"

[dependencies]
serde_json = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
swc_core = { workspace = true, features = ["ecma_plugin_transform"] }

[dev-dependencies]
swc_core = { workspace = true, features = ["testing"] }
swc_ecma_parser = { workspace = true }
testing = { workspace = true }
